2003-03-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Test for libtiff functions (TIFFClientOpen &
	TIFFIsByteSwapped), which are required by GraphicsMagick, but
	not found in older libtiff versions.
	* magick/blob.c: Added logging for Blob open/close and memory
	mapping operations.

2003-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.c (main): DestroyImage asserts on NULL so only
	call it for non-null image.
	* tests/rwfile.c (main): DestroyImage asserts on NULL so only
	call it for non-null image.

2003-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.c (main): Add -pause option to require keypress to
	exit program. Clean-up to avoid any appearance of leaks.
	* tests/rwfile.c (main): Add -pause option to require keypress to
	exit program. Clean-up to avoid any appearance of leaks.
	* magick/static.c (ExecuteStaticModuleProcess): Don't bind in
	process filter functions for Visual C++ since the build environment
	doesn't support it yet.
	* magick/log.c (GetLogBlob) Code wasn't actually testing current
	directory for log.mgk, now it does.
	* magick/log.c (IsEventLogging): Eliminate accidental recursive, or
	repeated, initialization of the logging system.

2003-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (WriteJP2Image): Improved -quality rate estimation
	for very small files.

2003-03-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (WriteJP2Image): Add additional logging support.
	* tests/rwblob.c: Added BLOB read/write logging.
	* tests/rwfile.c: Added file read/write logging.
	* magick/module.c (FindMagickModule): Minor code cleanup and limit
	directory and file name lengths to sensible values.
	* magick/utility.c (IsAccessible): Log test failures along with
	test failure reason [strerror(errno)]. Also log test success.
	* VisualMagick/bin/delegates.mgk: -DSAFER does not work with
	Ghostscript 8.0.