@@ -95,41 +95,6 @@
 #  define putc putc_unlocked
 #endif
 
-static const char *BlobStreamTypeToString(StreamType stream_type)
-{
-  char *
-    type_string="Undefined";
-
-  switch (stream_type)
-  {
-  case UndefinedStream:
-    type_string="Undefined";
-    break;
-  case FileStream:
-    type_string="File";
-    break;
-  case StandardStream:
-    type_string="Standard";
-    break;
-  case PipeStream:
-    type_string="Pipe";
-    break;
-  case ZipStream:
-    type_string="Zip";
-    break;
-  case BZipStream:
-    type_string="BZip";
-    break;
-  case FifoStream:
-    type_string="Fifo";
-    break;
-  case BlobStream:
-    type_string="Blob";
-    break;
-  }
-  return type_string;
-}
-
 /*
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                             %
@@ -266,7 +231,7 @@ MagickExport unsigned int BlobToFile(const char *filename,const void *blob,
   assert(filename != (const char *) NULL);
   assert(blob != (const void *) NULL);
   (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-    "Copying opaque BLOB to file %s\n",filename);
+    "Copying BLOB to file %s\n",filename);
   file=open(filename,O_WRONLY | O_CREAT | O_BINARY | O_EXCL,0777);
   if (file == -1)
     file=open(filename,O_WRONLY | O_CREAT | O_BINARY,0777);
@@ -490,9 +455,6 @@ MagickExport void CloseBlob(Image *image)
   assert(image->signature == MagickSignature);
   assert(image->blob != (BlobInfo *) NULL);
   assert(image->blob->type != UndefinedStream);
-  (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-    "Closing %sStream blob %p",BlobStreamTypeToString(image->blob->type),
-      &image->blob);
   status=0;
   switch (image->blob->type)
   {
@@ -772,8 +734,6 @@ MagickExport void *FileToBlob(const char *filename,size_t *length,
 
   assert(filename != (const char *) NULL);
   assert(exception != (ExceptionInfo *) NULL);
-  (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-    "Copying file %s to opaque Blob",filename);
   SetExceptionInfo(exception,UndefinedException);
   file=open(filename,O_RDONLY | O_BINARY,0777);
   if (file == -1)
@@ -1291,11 +1251,8 @@ MagickExport void *ImageToBlob(const ImageInfo *image_info,Image *image,
 %                                                                             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%  ImageToFile() copies the input image from an open blob stream to a file.
-%  It returns False if an error occurs otherwise True.  This function is used
-%  to handle coders which are unable to stream the data in using Blob I/O.
-%  Instead of streaming the data in, the data is streammed to a temporary
-%  file, and the coder accesses the temorary file directly.
+%  ImageToFile() writes an image to a file.  It returns False if an error
+%  occurs otherwise True.
 %
 %  The format of the ImageToFile method is:
 %
@@ -1338,10 +1295,6 @@ MagickExport unsigned int ImageToFile(Image *image,const char *filename,
   assert(image != (Image *) NULL);
   assert(image->signature == MagickSignature);
   assert(filename != (const char *) NULL);
-
-  (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-    "Copying from Blob stream to file %s",filename);
-
   file=open(filename,O_WRONLY | O_CREAT | O_BINARY | O_EXCL,0777);
   if (file == -1)
     file=open(filename,O_WRONLY | O_CREAT | O_BINARY,0777);
@@ -1440,9 +1393,6 @@ MagickExport void *MapBlob(int file,const MapMode mode,off_t offset,
   }
   if (map == (void *) MAP_FAILED)
     return((void *) NULL);
-  (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-    "Mmap file descriptor %d at offset %lu and length %ld to address 0x%p",
-    file,offset,length,map);
   return((void *) map);
 #else
   return((void *) NULL);
@@ -1590,18 +1540,11 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
   assert(image_info->signature == MagickSignature);
   assert(image != (Image *) NULL);
   assert(image->signature == MagickSignature);
-  (void) LogMagickEvent(BlobEvent,GetMagickModule(),"Opening Blob ...");
   if (image_info->blob != (void *) NULL)
     {
       if (image_info->stream != (StreamHandler) NULL)
-      {
         image->blob->stream=image_info->stream;
-        (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-          "  using image_info->stream (%d) for blob %p",&image->blob);
-      }
       AttachBlob(image->blob,image_info->blob,image_info->length);
-      (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-        "  attached image_info->blob to blob %p",&image->blob);
       return(True);
     }
   DetachBlob(image->blob);
@@ -1619,12 +1562,7 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
       image->blob->stream=image_info->stream;
       image->blob->type=FifoStream;
       if (*type == 'w')
-      {
-        (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-          "  opened image_info->stream (%d) as FifoStream blob %p",
-            image_info->stream,&image->blob);
         return(True);
-      }
     }
   /*
     Open image file.
@@ -1632,20 +1570,7 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
   (void) strncpy(filename,image->filename,MaxTextExtent-1);
   if (LocaleCompare(filename,"-") == 0)
     {
-      if (*type == 'r')
-      {
-        image->blob->file=stdin;
-        (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-          "  using stdin as StandardStream blob %p",
-            &image->blob);
-      }
-      else
-      {
-        image->blob->file=stdout;
-        (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-          "  using stdout as StandardStream blob %p",
-            &image->blob);
-      }
+      image->blob->file=(*type == 'r') ? stdin : stdout;
 #if defined(WIN32)
       if (strchr(type,'b') != (char *) NULL)
         setmode(_fileno(image->blob->file),_O_BINARY);
@@ -1671,12 +1596,7 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
         mode[1]='\0';
         image->blob->file=(FILE *) popen(filename+1,mode);
         if (image->blob->file != (FILE *) NULL)
-        {
           image->blob->type=PipeStream;
-          (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-            "  popened \"%s\" as PipeStream blob %p",
-              filename+1,&image->blob);
-        }
       }
     else
 #endif
@@ -1731,12 +1651,7 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
         {
           image->blob->file=(FILE *) gzopen(filename,type);
           if (image->blob->file != (FILE *) NULL)
-          {
             image->blob->type=ZipStream;
-            (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-              "  opened file %s as ZipStream blob %p",
-                filename,&image->blob);
-          }
         }
       else
 #endif
@@ -1746,12 +1661,7 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
           {
             image->blob->file=(FILE *) BZ2_bzopen(filename,type);
             if (image->blob->file != (FILE *) NULL)
-            {
               image->blob->type=BZipStream;
-              (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-              "  opened file %s as BZipStream blob %p",
-                filename,&image->blob);
-            }
           }
         else
 #endif
@@ -1760,9 +1670,6 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
               image->blob->file=image_info->file;
               image->blob->type=FileStream;
               image->blob->exempt=True;
-              (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-              "  opened image_info->file (%d) as FileStream blob %p",
-                image_info->file,&image->blob);
             }
           else
             {
@@ -1774,9 +1681,6 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
 
                   setvbuf(image->blob->file,NULL,_IOFBF,16384);
                   image->blob->type=FileStream;
-                  (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-                    "  opened file %s as FileStream blob %p",
-                      filename,&image->blob);
                   (void) fread(magick,MaxTextExtent,1,image->blob->file);
                   (void) rewind(image->blob->file);
 #if defined(HasZLIB)
@@ -1786,12 +1690,7 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
                       (void) fclose(image->blob->file);
                       image->blob->file=(FILE *) gzopen(filename,type);
                       if (image->blob->file != (FILE *) NULL)
-                      {
                         image->blob->type=ZipStream;
-                        (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-                          "  reopened file %s as ZipStream blob %p",
-                            filename,&image->blob);
-                      }
                      }
 #endif
 #if defined(HasBZLIB)
@@ -1800,12 +1699,7 @@ MagickExport unsigned int OpenBlob(const ImageInfo *image_info,Image *image,
                       (void) fclose(image->blob->file);
                       image->blob->file=(FILE *) BZ2_bzopen(filename,type);
                       if (image->blob->file != (FILE *) NULL)
-                      {
                         image->blob->type=BZipStream;
-                        (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-                          "  reopened file %s as BZipStream blob %p",
-                            filename,&image->blob);
-                      }
                     }
 #endif
                 }
@@ -2776,9 +2670,6 @@ MagickExport unsigned int UnmapBlob(void *map,const size_t length)
   int
     status;
 
-  (void) LogMagickEvent(BlobEvent,GetMagickModule(),
-    "Munmap file mapping at address 0x%p and length %ld",
-    map,length);
   status=munmap(map,length);
   return(status == 0);
 #else
