@@ -1,3 +1,12 @@
+2003-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/log.c (IsEventLogging): Only hold the lock long
+	enough to test initialization flags.  This should eliminate
+	one of the potential deadlock points.
+	* magick/blob.c: Revert to version before logging statements
+	were added since logging has uncovered deadlocks in the logging
+	subsystem design.
+
 2003-03-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: Test for libtiff functions (TIFFClientOpen &
